--- a/test.css
+++ b/test.css
@@ -1,3 +1,30 @@
+body {
+    margin-top: 4rem;
+}
+
+header {
+    display: flex;
+    flex-direction: row;
+    font-family: Helvetica, Arial, sans-serif;
+    box-shadow: 0px 2px 2px #ccc;
+    padding: 0 1rem;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    background: rgba(255, 255, 255, 0.9);
+}
+
+header > a {
+    color: black;
+    text-decoration: none;
+    padding: 1rem;
+}
+
+header > a:hover {
+    background: #eee;
+}
+
 main {
     display: flex;
 }
